Bug 279538 - Underscore (_) accelerator breaks spell checking
Summary: Underscore (_) accelerator breaks spell checking
Status: RESOLVED FIXED
Alias: None
Product: lokalize
Classification: Applications
Component: project management (other bugs)
Version First Reported In: 1.2
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Nick Shaforostoff
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-06 15:36 UTC by Rūdolfs Mazurs
Modified: 2011-11-13 20:04 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Rūdolfs Mazurs 2011-08-06 15:36:14 UTC
Version:           1.2 (KDE 4.6) (using KDE 4.7.0) 
OS:                Linux

When using GNOME style accelerator "_", Latvian spell checker (aspell) considers the given word as typed wrongly.
For example, "vi_deo" is marked as wrong. This is not a problem with other accelerators, such as "&" or "~" for KDE and LibreOffice.

Reproducible: Always

Steps to Reproduce:
1) Install aspell-lv
2) Configure project to use Latvian and "_" as accelerator
3) Write a string like "Die_na"

Actual Results:  
The translation is underlined as erroneous.

Expected Results:  
Text should be recognized as correct latvian
Comment 1 Nick Shaforostoff 2011-08-06 16:34:51 UTC
please specify _ as underscore symbol in project settings.
Comment 2 Rūdolfs Mazurs 2011-08-06 17:11:06 UTC
Alas, I did not find "underscore symbol" in project configuration. Closest thing was "Accelerator", which I already tried to no avail.
Comment 3 Nick Shaforostoff 2011-11-13 20:04:07 UTC
SVN commit 1264035 by shaforo:

BUG: 279538

correctly do spellcheck when accel is _



 M  +0 -1      glossary/glossaryview.cpp  
 M  +11 -4     syntaxhighlighter.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1264035