BUG: 279538

correctly do spellcheck when accel is _


svn path=/trunk/KDE/kdesdk/lokalize/; revision=1264035